<resources>
    <string name="app_name">河南骏通</string>
    <string name="basic_working_conditions">基本工况</string>
    <string name="zero_to_full_adjustment">调零调满</string>
    <string name="system_commissioning">系统调试</string>
    <string name="time_date">时间日期</string>
    <string name="system_information">系统信息</string>
    <string name="administrators">管理员</string>
    <string name="tips">提示</string>
    <string name="title">标题</string>
    <string name="date_name">日期</string>
    <string name="time_name">时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="morning">上午</string>
    <string name="afternoon">下午</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="work_arm">工作臂</string>
    <string name="magnification">倍率</string>
    <string name="leg">支腿</string>
    <string name="fifth_leg">第五支腿</string>
    <string name="work_area">工作区域</string>
    <string name="jib_length">副臂长度</string>
    <string name="jib_angle">副臂角度</string>
    <string name="save">保存</string>
    <string name="main_arm">主臂</string>
    <string name="arm_end_pulley">臂端滑轮</string>
    <string name="jib">副臂</string>
    <string name="frontal_weight">额定重量</string>
    <string name="moment_percentage">百分比</string>
    <string name="duration">持续时间(min)</string>
    <string name="please_enter_the_magnification">请输入倍率,范围1~20</string>
    <string name="full_extension">全伸</string>
    <string name="half_extension">半伸</string>
    <string name="unextended">未伸</string>
    <string name="please_enter_the_jib_length">请输入副臂长度</string>
    <string name="please_enter_the_jib_angle">请输入副臂角度</string>
    <string name="please_select">请选择</string>
    <string name="close">关闭</string>
    <string name="amplitude_debugging">幅度调试</string>
    <string name="empty_hook_debugging">空钩调试</string>
    <string name="weight_one">砝码1</string>
    <string name="weight_two">砝码2</string>
    <string name="centre_to_centre_spacing">中心距</string>
    <string name="amplitude">幅度</string>
    <string name="main_arm_K">主臂K</string>
    <string name="aquxiliary_arm_K">副臂K</string>
    <string name="enter_100">请输入,范围-20~100</string>
    <string name="software_version_number">软件版本号</string>
    <string name="manufacturer_name">厂家</string>
    <string name="after_sales_phone_number">联系电话</string>
    <string name="corporate_name">河南骏通</string>
    <string name="vehicle_model">车型号</string>
    <string name="quick_view">快速查看</string>
    <string name="start_debug">开始调试</string>
    <string name="parameter_recovery">参数恢复</string>
    <string name="parameter_reset">参数复位</string>
    <string name="determine_the_parameters_for_the_most_recent_recovery">确定恢复最近一次的参数？</string>
    <string name="determine_reset_parameters">确定复位参数？</string>
    <string name="empty_hook_weight">空钩重量</string>
    <string name="weight_one_weight">砝码1重量</string>
    <string name="weight_two_weight">砝码2重量</string>
    <string name="enter">请输入...</string>
    <string name="please_set_the_weight_of_the_empty_hook_or_weight_and_save_it">请设置空钩或者砝码的重量并保存!</string>
    <string name="rear_side">侧后方</string>
    <string name="the_front">前方</string>
    <string name="please_enter_the_password">请输入密码</string>
    <string name="password">密码</string>
    <string name="password_error">密码错误!</string>
    <string name="success_saved">保存成功!</string>
    <string name="save_or_not">是否保存?</string>
    <string name="loading">加载中…</string>
    <string name="fault_alarm_name">故障报警状态</string>
    <string name="general_fault_alarm">一般故障报警</string>
    <string name="overcurrent_fault">过流报警</string>
    <string name="overload">超载</string>
    <string name="equipment_failure">设备故障</string>
    <string name="overroll_alarm">过卷报警</string>
    <string name="over_discharge_alarm">过放报警</string>
    <string name="five_leg_overpressure_alarm">五支腿超压报警</string>
    <string name="angle_upper_limit_alarm">最大角度报警</string>
    <string name="angle_lower_limit_alarm">最小角度报警</string>
    <string name="compulsory_termination">强制解除</string>
    <string name="length_1_fault">长度1传感器</string>
    <string name="length_2_fault">长度2传感器</string>
    <string name="angle_1_fault">角度1传感器</string>
    <string name="angle_2_fault">角度2传感器</string>
    <string name="pressure_1_fault">大腔压力传感器</string>
    <string name="pressure_2_fault">小腔压力传感器</string>
    <string name="anemometer_malfunction">风速仪</string>
    <string name="engine_fault">发动机故障</string>
    <string name="excessive_coolant_temperature">冷却液温度过高</string>
    <string name="low_oil_pressuse">机油压力过低</string>
    <string name="low_fuel_volume">燃油油量过低</string>
    <string name="open">打开</string>
    <string name="normal">正常</string>
    <string name="ad_below_lower_limit">信号中断</string>
    <string name="ad_below_upper_limit">AD高于上限</string>
    <string name="fill_up">调满</string>
    <string name="zero_adjustment">调零</string>
    <string name="whether_or_not_fill_up">是否调满？</string>
    <string name="whether_or_not_zero_adjustment">是否调零？</string>
    <string name="ad_name">AD值</string>
    <string name="actual">实际值</string>
    <string name="show_admin">设置界面已显示管理员入口!</string>
    <string name="factor_settings">系数设置</string>
    <string name="lifting_weight_parameters">吊重参数</string>
    <string name="structure_parameters">结构参数</string>
    <string name="sensor_view">传感器查看</string>
    <string name="sensor_calibrate">传感器标定</string>
    <string name="restore_factory_settings">恢复出厂设置</string>
    <string name="actual_weight">实重</string>
    <string name="coefficient_p1">P1系数</string>
    <string name="enter_120">请输入,范围80~120</string>
    <string name="empty_hook_parameters">空钩参数</string>
    <string name="weight_one_parameters">砝码1参数</string>
    <string name="weight_two_parameters">砝码2参数</string>
    <string name="debugging_weight">调试重量</string>
    <string name="maximum_arm_length">最大臂长</string>
    <string name="minimum_arm_length">最小臂长</string>
    <string name="maximum_angle">最大角度</string>
    <string name="minimum_angle">最小角度</string>
    <string name="spacing">中心距</string>
    <string name="chassis_height">底盘高</string>
    <string name="zero">零值</string>
    <string name="full_value">满值</string>
    <string name="confirm_factory_reset">确定恢复出厂设置？</string>
    <string name="reset_success">已恢复出厂设置，重启后生效!</string>
    <string name="ad_zero">零值AD</string>
    <string name="ad_full_value">满值AD</string>
    <string name="downloading">下载中...</string>
    <string name="overload_record">超载记录</string>
    <string name="debug_details_title">调试详情</string>
    <string name="debug_tails_collect">采集</string>
    <string name="debug_details_calculate">计算</string>
    <string name="debug_details_hintinfo">当前采集的组数</string>
    <string name="debug_details_hint_calc">计算完成</string>
    <string name="enter_equals">值相同，已保存</string>
    <string name="min_angle">最小角度</string>
    <string name="max_angle">最大角度</string>
    <string name="min_angle_hintinfo">请输入最小角度, 范围: -10~80</string>
    <string name="max_angle_hintinfo">请输入最大角度, 范围:-10~80</string>
    <string name="program_version">程序版本</string>
    <string name="total_working_hours">总工作时长</string>
    <string name="status_query">状态查询</string>
    <string name="fault_alarm">故障报警</string>
    <string name="overcurrent_alarm">过流报警</string>
    <string name="input_output_status">输入输出状态</string>
    <string name="big_hook">大钩</string>
    <string name="small_hook">小钩</string>
    <string name="function_selection">功能选择</string>
    <string name="empty_calibration">空载标定</string>
    <string name="overload_calibration">重载标定</string>
    <string name="coefficien_settings">系数设置</string>
    <string name="serial_number">序号</string>
    <string name="working_condition">工况信息</string>
    <string name="see">查看详情</string>
    <string name="last_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="model_selection">车型选择</string>
    <string name="confirm_ok">确认后请按确定即可开始工作</string>
    <string name="model_reset_success">车型已重新选择，重启后生效!</string>
    <string name="select_this_model">是否确认选择该车型?确定后数据将恢复出厂设置!</string>
    <string name="input_state">输入状态</string>
    <string name="output_state">输出状态</string>
    <string name="bus_communication_failure">总线通讯故障</string>
    <string name="main_control_valve">主控阀</string>
    <string name="cylinder_switching_valve">油缸切换阀</string>
    <string name="lifting_shrinking_arm_valve">起幅/缩臂阀</string>
    <string name="lowering_extending_arm_valve">落幅/伸臂阀</string>
    <string name="overroll_protection_valve">过卷保护阀</string>
    <string name="overdischarge_protection_valve">过放保护阀</string>
    <string name="buzzer">蜂鸣器</string>
    <string name="oil_cooler_air_conditioning_control">油冷控制</string>
    <string name="front_wiper_high_speed">前雨刮高速</string>
    <string name="front_wiper_low_speed">前雨刮低速</string>
    <string name="top_wiper_low_speed">顶雨刮低速</string>
    <string name="front_washing">前洗涤</string>
    <string name="top_washing">顶洗涤</string>
    <string name="work_lights_turntable">工作灯-转台</string>
    <string name="work_lights_boom">工作灯-吊臂</string>
    <string name="position_light">示廓灯</string>
    <string name="three_color_green_light">三色绿灯</string>
    <string name="three_color_yellow_light">三色黄灯</string>
    <string name="three_color_red_light">三色红灯</string>
    <string name="air_conditioning_control_end">空调控制端</string>
    <string name="engine_shutdown_control">熄火控制</string>
    <string name="master_switch">主令开关</string>
    <string name="force_switch">强制开关</string>
    <string name="overload_release">超载解除</string>
    <string name="cylinder_switching_switch">油缸切换开关</string>
    <string name="variable_amplitude_telescopic_switching_switch">变幅伸缩切换开关</string>
    <string name="judgment">120°判断</string>
    <string name="overroll_signal">过卷信号</string>
    <string name="power_take_off_signal">取力信号</string>
    <string name="auxiliary_hook_over_roll_signal">副钩过卷信号</string>
    <string name="front_wiper_reset">前雨刮复位</string>
    <string name="top_wiper_reset">顶雨刮复位</string>
    <string name="oil_cooler_switch">油冷器开关</string>
    <string name="air_conditioning_switch">空调开关</string>
    <string name="front_wiper_low_speed_switch">前雨刮低速开关</string>
    <string name="front_wiper_high_speed_switch">前雨刮高速开关</string>
    <string name="top_wiper_low_speed_switch">顶雨刮低速开关</string>
    <string name="front_wiper_wash_switch">前雨刮洗涤开关</string>
    <string name="top_wiper_washing_switch">顶雨刮洗涤开关</string>
    <string name="turntable_work_light_switch">转台工作灯开关</string>
    <string name="boom_work_light_switch">吊臂工作灯开关</string>
    <string name="position_light_switch">示廓灯开关</string>
    <string name="diverter_valve">分流阀</string>
    <string name="main_roll_overplay">主卷过放</string>
    <string name="auxiliary_roll_over_release">副卷过放</string>
    <string name="overdischarge_signal_valve">过放信号</string>
    <string name="brightness_adjustment">亮度调节</string>
    <string name="automatically_adjust_brightness">自动调整亮度</string>
    <string name="automatically_adjust_brightness_based">根据周围环境自动调节亮度</string>
    <string name="brightness_name">屏幕亮度</string>
    <string name="video_imaging">视频影像</string>
    <string name="tool">小工具</string>
    <string name="wifi">Wifi</string>
    <string name="overload_data_export">超载数据导出</string>
    <string name="fram_data_backup">Fram数据备份</string>
    <string name="fram_data_restoration">Fram数据还原</string>
    <string name="export_to_USB_drive">导出到U盘</string>
    <string name="export_from_wiFi">从网络导出</string>
    <string name="wifi_name">WLAN</string>
    <string name="select_nearby_wifi">选取附近的WLAN</string>
    <string name="connect_to_this_network">是否连接该网络？</string>
    <string name="cancel_saving_this_network">是否取消保存该网络？</string>
    <string name="unknown_network_hidden_network">未知网络/隐藏网络</string>
    <string name="encryption">加密</string>
    <string name="openness">开放</string>
    <string name="set_focus">设置中心</string>
</resources>