<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_28">
        <TextView
            android:id="@+id/tv_serial_number"
            android:background="@drawable/center_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c888888"
            android:text="@string/serial_number"/>
        <TextView
            android:id="@+id/tv_time_date"
            android:background="@drawable/center_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c888888"
            android:text="@string/time_date"/>
        <TextView
            android:id="@+id/tv_amplitude"
            android:background="@drawable/center_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c888888"
            android:text="@string/amplitude"/>
        <TextView
            android:id="@+id/tv_frontal_weight"
            android:background="@drawable/center_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c888888"
            android:text="@string/frontal_weight"/>
        <TextView
            android:id="@+id/tv_actual_weight"
            android:background="@drawable/center_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c888888"
            android:text="@string/actual_weight"/>
        <TextView
            android:id="@+id/tv_moment_percentage"
            android:background="@drawable/center_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c888888"
            android:text="@string/moment_percentage"/>
        <TextView
            android:id="@+id/tv_duration"
            android:background="@drawable/center_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="2.2"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c888888"
            android:text="@string/duration"/>
        <TextView
            android:id="@+id/tv_see"
            android:background="@drawable/center_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/cus_m_blue"
            android:text="@string/see"/>
    </LinearLayout>
</LinearLayout>