<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <LinearLayout
            android:id="@+id/ll_return"
            android:layout_width="@dimen/dp_120"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_12"
                android:src="@drawable/return_icon" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/overload_record"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_28">
        <TextView
            android:id="@+id/tv1"
            android:background="@drawable/left_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c444444"
            android:text="@string/serial_number"/>
        <TextView
            android:id="@+id/tv2"
            android:background="@drawable/left_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c444444"
            android:text="@string/time_date"/>
        <TextView
            android:id="@+id/tv3"
            android:background="@drawable/left_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c444444"
            android:text="@string/amplitude"/>
        <TextView
            android:id="@+id/tv4"
            android:background="@drawable/left_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c444444"
            android:text="@string/frontal_weight"/>
        <TextView
            android:id="@+id/tv5"
            android:background="@drawable/left_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c444444"
            android:text="@string/actual_weight"/>
        <TextView
            android:id="@+id/tv6"
            android:background="@drawable/left_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c444444"
            android:text="@string/moment_percentage"/>
        <TextView
            android:id="@+id/tv7"
            android:background="@drawable/left_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="2.2"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c444444"
            android:text="@string/duration"/>
        <TextView
            android:id="@+id/tv8"
            android:background="@drawable/left_shapee"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c444444"
            android:text="@string/working_condition"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1">
        <com.hndl.ui.widget.MyListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="@dimen/dp_0"
            android:divider="@null"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">
        <TextView
            android:id="@+id/btn_last_page"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_26"
            android:text="@string/last_page"
            android:background="@drawable/blue_bg_circle"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"/>
        <TextView
            android:id="@+id/tv_num"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_26"
            android:background="@drawable/blue_frame_circle"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"/>
        <TextView
            android:id="@+id/btn_next_page"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_26"
            android:text="@string/next_page"
            android:background="@drawable/blue_bg_circle"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>
</LinearLayout>