<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <LinearLayout
            android:id="@+id/ll_return"
            android:layout_width="@dimen/dp_120"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_12"
                android:src="@drawable/return_icon" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/system_commissioning"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_amplitude_debugging"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_32"
        android:background="@drawable/white_frame_bg"
        android:text="@string/amplitude_debugging"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/c444444"/>
    <TextView
        android:id="@+id/tv_empty_hook_debugging"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_32"
        android:background="@drawable/white_frame_bg"
        android:text="@string/empty_hook_debugging"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/c444444"/>
    <TextView
        android:id="@+id/tv_weight_one"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_32"
        android:background="@drawable/white_frame_bg"
        android:text="@string/weight_one"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/c444444"/>
    <TextView
        android:id="@+id/tv_weight_two"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_32"
        android:background="@drawable/white_frame_bg"
        android:text="@string/weight_two"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/c444444"/>
</LinearLayout>